--- a/includes/css/sass/_mixins.scss
+++ b/includes/css/sass/_mixins.scss
@@ -2,3 +2,9 @@
   width: $width;
   height: $height;
 }
+
+@mixin cell-settings(){
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
