--- a/includes/css/sass/_intro.scss
+++ b/includes/css/sass/_intro.scss
@@ -61,11 +61,11 @@
     background-size: contain;
   }
   .intro2{
-    background: url('../../images/intro2_content.jpeg') no-repeat center center;
+    background: url('../../images/intro2_content.png') no-repeat center center;
     background-size: contain;
   }
   .intro3{
-    background: url('../../images/intro3_content.jpeg') no-repeat center center;
+    background: url('../../images/intro3_content.png') no-repeat center center;
     background-size: contain;
   }
   .radio-cont{
