--- a/includes/css/sass/_settings.scss
+++ b/includes/css/sass/_settings.scss
@@ -1,1 +1,16 @@
 $hr_color: #BCDBE0;
+
+@font-face {
+  font-family: 'memphis';
+  src: url('../stylesheets/26165_MPM_____.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'roboto_light';
+  src: url('../stylesheets/Roboto-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'roboto_bold';
+  src: url('../stylesheets/Roboto-Bold.ttf') format('truetype');
+}
