--- a/partials/intro1.html
+++ b/partials/intro1.html
@@ -1,6 +1,6 @@
 <section class="intro-cont">
     <header>
-        <section class="skip-intro"></section>
+        <section class="skip-intro" ng-click="step_to('browse')"></section>
         <section class="welcome"></section>
         <section class="hr"></section>
     </header>
