--- a/includes/css/sass/_structure.scss
+++ b/includes/css/sass/_structure.scss
@@ -7,3 +7,9 @@ html, body{
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-tap-highlight-color: transparent; /* For some Androids */
 }
+
+@include landscape(){
+  html, body {
+    @include size(100%, 153%);
+  }
+}
