--- a/partials/intro3.html
+++ b/partials/intro3.html
@@ -1,6 +1,6 @@
 <section class="intro-cont">
     <header>
-        <section class="skip-intro"></section>
+        <section class="skip-intro" ng-click="step_to('browse')"></section>
         <section class="welcome"></section>
         <section class="hr"></section>
     </header>
@@ -18,6 +18,6 @@
     </section>
     <footer>
         <section class="space"></section>
-        <section class="intro-next"></section>
+        <section class="intro-next" ng-click="step_to('browse')"></section>
     </footer>
 </section>
