--- a/includes/css/sass/_browse-page.scss
+++ b/includes/css/sass/_browse-page.scss
@@ -104,39 +104,63 @@
 
   .info-cont{
     @include size(65%, 100%);
-    background-color: yellow;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     float: left;
+    overflow: hidden;
   }
   .title-cont{
     @include size(100%, 31.5%);
-    background-color: yellow;
+    display: table;
+    p{
+      display: table-cell;
+      vertical-align: middle;
+      color: #0D7E8E;
+      font-size: 22px;
+      font-family: roboto_bold;
+      line-height: 18px;
+      white-space: nowrap; /* Don't forget this one */
+      text-overflow: ellipsis;
+    }
   }
   .author-cont{
     @include size(100%, 17.5%);
-    background-color: green;
+    display: table;
+    p{
+      display: table-cell;
+      vertical-align: middle;
+      color: #0D7E8E;
+      font-size: 10px;
+      font-family: roboto_bold;
+      line-height: 10px;
+    }
   }
   .rank-cont{
     @include size(100%, 17.5%);
-    background-color: orange;
+    p{
+      font-size: 13px;
+      color: #EEDA44;
+      text-shadow: 0px 0px 1px rgba(#000, 1);
+      display: inline;
+      margin-right: 5px;
+    }
   }
   .buttons-cont{
     @include size(100%, 33.5%);
-    background-color: brown;
   }
-
-//  p.title{
-//    color: #0D7E8E;
-//    width: 60%;
-//    font-size: 18px;
-//    font-family: roboto_bold;
-//    line-height: 18px;
-//    text-align: left;
-//    position: absolute;
-//    right: 0px;
-//    top: 5px;
-//  }
+  .more-info-button{
+    @include size(52%,73%);
+    float: left;
+    border-radius: 5px;
+    background: #0D7E8E url('../../images/more_info_button.png') no-repeat center center;
+  }
+  .share-button{
+    @include size(38.5%,73%);
+    float: left;
+    margin-left: 5.5%;
+    border-radius: 5px;
+    background: #0D7E8E url('../../images/share_button.png') no-repeat center center;
+  }
   .hr{
     border: 0;
     height: 3px;
