--- a/includes/css/stylesheets/style.css
+++ b/includes/css/stylesheets/style.css
@@ -12,11 +12,10 @@
 }
 /* line 1, ../sass/_structure.scss */
 html, body {
-  width: 100%;
   height: 100%;
 }
 
-/* line 4, ../sass/_structure.scss */
+/* line 6, ../sass/_structure.scss */
 * {
   margin: 0;
   padding: 0;
@@ -26,7 +25,7 @@ html, body {
 }
 
 @media only screen and (min-width: 480px) {
-  /* line 12, ../sass/_structure.scss */
+  /* line 14, ../sass/_structure.scss */
   html, body {
     width: 100%;
     height: 153%;
@@ -416,4 +415,54 @@ html, body {
   background-image: -moz-linear-gradient(left, #BCDBE0, #BCDBE0, #BCDBE0);
   background-image: -ms-linear-gradient(left, #BCDBE0, #BCDBE0, #BCDBE0);
   background-image: -o-linear-gradient(left, #BCDBE0, #BCDBE0, #BCDBE0);
+}
+
+/* line 1, ../sass/_search.scss */
+.browse-cont {
+  width: 100%;
+  height: 100%;
+}
+/* line 3, ../sass/_search.scss */
+.browse-cont .input-cont {
+  width: 80%;
+  height: 70%;
+  background-color: #FFF;
+  border-radius: 5px;
+  margin: 3% auto;
+  display: table;
+}
+/* line 10, ../sass/_search.scss */
+.browse-cont .x-cont {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  width: 25%;
+  height: 100%;
+}
+/* line 13, ../sass/_search.scss */
+.browse-cont .x-cont p {
+  font-size: 30px;
+  color: rgba(51, 51, 51, 0.8);
+  text-align: center;
+}
+/* line 19, ../sass/_search.scss */
+.browse-cont .input-wrap {
+  display: table-cell;
+  width: 75%;
+  height: 100%;
+}
+/* line 23, ../sass/_search.scss */
+.browse-cont input {
+  width: 97%;
+  height: 98%;
+  padding-left: 10px;
+  margin-left: 7px;
+  font-size: 30px;
+  color: rgba(51, 51, 51, 0.8);
+  border: 0;
+}
+
+/* line 32, ../sass/_search.scss */
+*:focus {
+  outline: 0;
 }
