--- a/partials/browse.html
+++ b/partials/browse.html
@@ -3,7 +3,7 @@
         <section class="a-icon-cont"><p ng-click="step_to('splash-screen')"></p></section>
         <section class="space-cont"></section>
         <section class="search-icon-cont" ng-click="search()"><p></p></section>
-        <section class="hamburger-icon-cont"><p></p></section>
+        <section class="hamburger-icon-cont" ng-click="step_to('filters')"><p></p></section>
         <section class="hr"></section>
     </header>
     <section class="main">
