--- a/includes/css/sass/_filters.scss
+++ b/includes/css/sass/_filters.scss
@@ -1,4 +1,4 @@
-.browse-cont{
+.filters-cont{
   width: 100%;
   min-height: 100%;
   header{
@@ -13,11 +13,9 @@
     p{
       margin: 0 auto;
       @include size(58px, 35px);
-      background: url('../../images/hamburger.png') no-repeat center center;
-      -webkit-background-size: contain;
-      -moz-background-size: contain;
-      -o-background-size: contain;
-      background-size: contain;
+      line-height: 35px;
+      font-size: 28px;
+      color: #FFFFFE;
     }
   }
   .search-icon-cont{
@@ -51,117 +49,76 @@
     }
   }
   .main{
-    @include size(100%, 85%);
-    background-color: #4098A4;
-  }
-  .content-cont{
     width: 100%;
-    background-color: #4098A4;
+    background-color: #FFFFFF;
   }
-  .top-bar{
+  .filter-cont{
     @include size(85%, 35px);
     margin: 0 auto;
     display: table;
   }
-  .filter-cont{
+  .filter-box-left{
     @include size(50%, 100%);
     display: table-cell;
     vertical-align: bottom;
     p{
       text-align: left;
-      line-height: 18px;
       font-family: memphis;
       font-size: 18px;
-      color: #FFF;
+      color: rgba(#0D7E8E, 0.5);
     }
   }
-  .clear-filter-cont{
+  #genres{
+    font-family: roboto_light;
+    color: rgba(#0D7E8E, 0.7);
+  }
+  #genre-title{
+    @include size(85%, 22px);
+  }
+  .filter-box-right {
     @include size(50%, 100%);
     display: table-cell;
     vertical-align: bottom;
     p{
       text-align: right;
-      line-height: 15px;
       font-family: roboto_light;
       font-size: 15px;
-      text-decoration: underline;
-      color: #FFF;
+      color: rgba(#333,0.9);
     }
   }
-  .book-cont{
-    @include size(305px,118px);
-    border-radius: 5px;
-    margin: 20px auto;
-    box-shadow: 0 0 1px 1px rgba(#333, 0.2);
-    position: relative;
-    background-color: #FCFCFC;
+  .space{
+    @include size(100%, 25px);
   }
-
-  .image{
-    @include size(35%, 100%);
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    float: left;
-  }
-
-  .info-cont{
-    @include size(65%, 100%);
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    float: left;
-    overflow: hidden;
-  }
-  .title-cont{
-    @include size(100%, 31.5%);
+  .row{
+    @include size(85%, 40px);
+    margin: 15px auto;
+    margin-bottom: 15px;
     display: table;
+  }
+  .check{
+    display: table-cell;
+    @include size(40px,40px);
+    border: solid 2px #0D7E8E;
+    border-radius: 15px;
+  }
+  .filter-name{
+    display: table-cell;
+    vertical-align: middle;
     p{
-      display: table-cell;
-      vertical-align: middle;
-      color: #0D7E8E;
+      font-family: roboto_light;
       font-size: 22px;
-      font-family: roboto_bold;
-      line-height: 18px;
-      white-space: nowrap; /* Don't forget this one */
-      text-overflow: ellipsis;
+      color: rgba(#0D7E8E,0.8);
+      padding-left: 15px;
     }
   }
-  .author-cont{
-    @include size(100%, 17.5%);
-    display: table;
-    p{
-      display: table-cell;
-      vertical-align: middle;
-      color: #0D7E8E;
-      font-size: 10px;
-      font-family: roboto_bold;
-      line-height: 10px;
-    }
-  }
-  .rank-cont{
-    @include size(100%, 17.5%);
-    p{
-      font-size: 13px;
-      color: #EEDA44;
-      text-shadow: 0px 0px 1px rgba(#000, 1);
-      display: inline;
-      margin-right: 5px;
-    }
-  }
-  .buttons-cont{
-    @include size(100%, 33.5%);
-  }
-  .more-info-button{
-    @include size(52%,73%);
-    float: left;
+  .done{
+    @include size(85%, 50px);
+    margin: 5px auto 25px;
     border-radius: 5px;
-    background: #0D7E8E url('../../images/more_info_button.png') no-repeat center center;
+    background: #0D7E8E url('../../images/done.png') no-repeat center center;
   }
-  .share-button{
-    @include size(38.5%,73%);
-    float: left;
-    margin-left: 5.5%;
-    border-radius: 5px;
-    background: #0D7E8E url('../../images/share_button.png') no-repeat center center;
+  .v-bg{
+    background: url('../../images/v.png') no-repeat center center;
   }
   .hr{
     border: 0;
