--- a/includes/css/sass/_structure.scss
+++ b/includes/css/sass/_structure.scss
@@ -2,6 +2,8 @@ html, body{
   //@include size(100%, 100%);
   //height: 100%;
   height: 100%;
+  width: 100%;
+  background-color: #4098A4;
 }
 *{
   margin: 0;
